package facade.player;

import view.Observer;

public interface IPlayerObserver {

	public void attach(Observer o);
	
	public void dettach(Observer o);
	
	public void notifyObserversTime(int time);
	
	public void notifyObserversFile(String newInfos);
}
